--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "nodemon": "^3.1.10",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
-    "sass": "^1.92.1"
+    "sass": "^1.92.1",
+    "tom-select": "^2.4.3"
   },
   "browserslist": [
     "defaults"
