--- a/test/fixtures/shifts.yml
+++ b/test/fixtures/shifts.yml
@@ -2,10 +2,12 @@
 
 one:
   user: one
+  project: one
   shift_date: 2025-09-16 17:26:43
   shift_category: 1
 
 two:
   user: two
+  project: one
   shift_date: 2025-09-16 17:26:43
   shift_category: 1
