--- a/test/fixtures/staffs.yml
+++ b/test/fixtures/staffs.yml
@@ -3,11 +3,11 @@
 one:
   project: one
   name: MyString
-  role: 1
+  position: nurse
   comment: MyString
 
 two:
   project: two
   name: MyString
-  role: 1
+  position: nurse
   comment: MyString
